# HighSeas-GameOfDreams

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: bumpversion.yaml
hs_drmgame/: __init__.py
tests/: game.py
