[tool.poetry]
name = "hsdrmgame"
version = "0.2.0"
description = "A game with Abhyudaya Taneja"
authors = ["Abhijay Bidari <craftyryte2011@gmail.com>"]
packages = [
    { include = "hs_drmgame" }
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame-ce = "^2.5.2"
numpy = "^2.1.3"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
